--- a/lib/theme.css
+++ b/lib/theme.css
@@ -1,6 +1,308 @@
-
-.dropdown {float:right;}
-#dLabel img {display:inline-block;vertical-align:middle;height:30px;width:30px;margin:10px 0;}
-.navbar-header {width:100%}
-.nav {display:inline-block;width:150px;text-align:right;color:#ccc;font-size:11px;}
-.nav:hover {color:#FFF;}
+body {
+  background-color:#C7EDE8;
+  font-family:'Open Sans', Arial, sans-serif;
+  color:#212121;
+}
+a {
+  color: #FF9800;
+}
+a:hover {
+  color:#FFC107;
+}
+.h1, .h2, .h3, h1, h2, h3 {
+  margin-top: 10px;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #B6B6B6;
+  margin: 1em 0;
+  padding: 0;
+  color:#B6B6B6;
+}
+/* ALERTS
+//////////////////////////////*/
+.alert {
+  margin-bottom:10px;
+}
+.glyphicon {
+  margin-right:5px;
+}
+/* NAVBAR
+//////////////////////////////*/
+.dropdown {
+  float:right;
+}
+.navbar {
+    background-color:#607D8B;
+    border-top:5px solid #455A64;
+    box-shadow: 0px 4px 4px #CFD8DC;
+    min-height:40px;
+}
+#dLabel img {
+  display:inline-block;
+  vertical-align:middle;
+  height:20px;
+  width:20px;
+  border-radius:20px;
+  margin:10px 0;
+}
+.navbar-header {
+  width:100%
+}
+.navbar-brand {
+  font-family:Raleway, sans-serif;
+  font-weight:300;
+  color:#fff;
+  height:40px;
+  padding:10px 15px;
+}
+.nav {
+  display:inline-block;
+  width:150px;
+  text-align:right;
+  color:#fff;
+  font-size:13px;
+}
+.nav span {
+  font-size:11px;
+}
+.nav:hover {
+  color:#FF9800;
+}
+/* FOOTER
+/////////////////////////////////*/
+.foot {
+  color:#999;
+}
+/* LOGIN & REGISTER
+/////////////////////////////////*/
+.hide {
+  display:none;
+}
+.show {
+  display:block;
+}
+.zero-clipboard {
+  display:block;
+  position:relative;
+}
+.btn-clipboard {
+  border-top-right-radius:0;
+  position:absolute;
+  right:0;
+  display: block;
+  padding: 5px 8px;
+  font-size: 12px;
+  color: #767676;
+  cursor: pointer;
+  background-color: #fff;
+  border-width: 0 0 1px 1px;
+  border-color: #e1e1e8;
+  border-style:solid;
+  border-radius: 0 4px 0 4px;
+}
+/* BUTTONS
+////////////////////////////////*/
+.btn-cta, .btn-cta:visited {
+  color:#fff;
+  background-color:#F57C00;
+  border-color:#A7DBD8;
+}
+.btn-cta:active {
+  color:#fff;
+  background-color:#F57C00;
+  border-color:#A7DBD8;
+}
+.btn-cta:hover {
+  color:#fff;
+  background-color:#FF9800;
+  border-color:#A7DBD8;
+}
+/* LAODING
+//////////////////////////////*/
+.loading {
+  font-size:50px;
+  color:#B6B6B6;
+  margin:20px 0;
+}
+/* SPIN ISH
+//////////////////////////////*/
+.cssload-loader {
+	position: relative;
+	left: calc(50% - 31px);
+	width: 62px;
+	height: 62px;
+	border-radius: 50%;
+		-o-border-radius: 50%;
+		-ms-border-radius: 50%;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+	perspective: 780px;
+}
+.cssload-inner {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+		-o-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+	border-radius: 50%;
+		-o-border-radius: 50%;
+		-ms-border-radius: 50%;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+}
+.cssload-inner.cssload-one {
+	left: 0%;
+	top: 0%;
+	animation: cssload-rotate-one 1.15s linear infinite;
+		-o-animation: cssload-rotate-one 1.15s linear infinite;
+		-ms-animation: cssload-rotate-one 1.15s linear infinite;
+		-webkit-animation: cssload-rotate-one 1.15s linear infinite;
+		-moz-animation: cssload-rotate-one 1.15s linear infinite;
+	border-bottom: 3px solid rgb(255,193,7);
+}
+.cssload-inner.cssload-two {
+	right: 0%;
+	top: 0%;
+	animation: cssload-rotate-two 1.15s linear infinite;
+		-o-animation: cssload-rotate-two 1.15s linear infinite;
+		-ms-animation: cssload-rotate-two 1.15s linear infinite;
+		-webkit-animation: cssload-rotate-two 1.15s linear infinite;
+		-moz-animation: cssload-rotate-two 1.15s linear infinite;
+	border-right: 3px solid rgb(96,125,139);
+}
+.cssload-inner.cssload-three {
+	right: 0%;
+	bottom: 0%;
+	animation: cssload-rotate-three 1.15s linear infinite;
+		-o-animation: cssload-rotate-three 1.15s linear infinite;
+		-ms-animation: cssload-rotate-three 1.15s linear infinite;
+		-webkit-animation: cssload-rotate-three 1.15s linear infinite;
+		-moz-animation: cssload-rotate-three 1.15s linear infinite;
+	border-top: 3px solid rgb(69,90,100);
+}
+@keyframes cssload-rotate-one {
+	0% {
+		transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+@-o-keyframes cssload-rotate-one {
+	0% {
+		-o-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+@-ms-keyframes cssload-rotate-one {
+	0% {
+		-ms-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+@-webkit-keyframes cssload-rotate-one {
+	0% {
+		-webkit-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+@-moz-keyframes cssload-rotate-one {
+	0% {
+		-moz-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+@keyframes cssload-rotate-two {
+	0% {
+		transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+@-o-keyframes cssload-rotate-two {
+	0% {
+		-o-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+@-ms-keyframes cssload-rotate-two {
+	0% {
+		-ms-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+@-webkit-keyframes cssload-rotate-two {
+	0% {
+		-webkit-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+@-moz-keyframes cssload-rotate-two {
+	0% {
+		-moz-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+@keyframes cssload-rotate-three {
+	0% {
+		transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+@-o-keyframes cssload-rotate-three {
+	0% {
+		-o-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+@-ms-keyframes cssload-rotate-three {
+	0% {
+		-ms-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+@-webkit-keyframes cssload-rotate-three {
+	0% {
+		-webkit-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+@-moz-keyframes cssload-rotate-three {
+	0% {
+		-moz-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
