--- a/lib/theme.css
+++ b/lib/theme.css
@@ -25,6 +25,16 @@ hr {
 .container-fluid {
   padding:0 3%;
 }
+/* EDITABLE HEADERS
+//////////////////////////////*/
+.template-name:hover:after {
+  content: ' \270f';
+  font-family: 'Glyphicons Halflings';
+  font-size:.8em;
+}
+.template-name {
+  display:inline;
+}
 /* ALERTS
 //////////////////////////////*/
 .alert {
@@ -139,10 +149,15 @@ footer a:hover {
   border-radius:0;
 }
 .panel-body {
-  padding-top:25px;
+  padding-top:20px;
 }
 #sub-head-1 {
   margin-top:0;
+}
+/* PROFILE
+/////////////////////////////////*/
+.add-member {
+  padding:0;
 }
 /* LOGIN & REGISTER
 /////////////////////////////////*/
@@ -208,6 +223,20 @@ footer a:hover {
 .modal-content {
   border-radius:0px;
   box-shadow: none;
+}
+/* EDITOR
+//////////////////////////////*/
+#editor {
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  min-height:300px;
+}
+pre {
+  border-radius:0;
+  border:0;
 }
 /* TABLE
 //////////////////////////////*/
