--- a/lib/theme.css
+++ b/lib/theme.css
@@ -27,13 +27,22 @@ hr {
 }
 /* EDITABLE HEADERS
 //////////////////////////////*/
-.template-name:hover:after {
+.template-name-hov:hover:after {
   content: ' \270f';
   font-family: 'Glyphicons Halflings';
   font-size:.8em;
 }
+.template-name:hover {
+  border-bottom:1px dashed #999;
+}
 .template-name {
   display:inline;
+  border:0;
+  width:auto;
+  background:none;
+  vertical-align:middle;
+  max-width:300px;
+  border-bottom:1px dashed #ccc;
 }
 /* ALERTS
 //////////////////////////////*/
@@ -233,6 +242,7 @@ footer a:hover {
   bottom: 0;
   left: 0;
   min-height:300px;
+  font-family:'Source Code Pro', monospace;
 }
 pre {
   border-radius:0;
