More Firebase/Bootstrap Updates
Getting closer to the pre-firebase 3 update functionality. Just need to
fix up the profile page then I can get back to work on the actual
template management.

--- a/lib/theme.css
+++ b/lib/theme.css
@@ -262,9 +262,21 @@ pre {
 }
 /* SPIN ISH
 //////////////////////////////*/
+.loading-all {
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+  opacity: .9;
+  height:100%;
+  z-index:99999;
+  background-color:#fff;
+}
 .cssload-loader {
 	position: relative;
 	left: calc(50% - 31px);
+  top: calc(50% - 62px);
 	width: 62px;
 	height: 62px;
 	border-radius: 50%;
